Fixed images not showing up due to new merge

--- a/src/components/SearchBox/SearchBox.scss
+++ b/src/components/SearchBox/SearchBox.scss
@@ -15,7 +15,7 @@
     background-color: $clr-accent-grey;
     color: $clr-black;
     border: none;
-    background-image: url("images/search.png");
+    background-image: url("./../../assets/images/search.png");
     background-position: right center;
     background-repeat: no-repeat;
     background-size: contain;
